log
sá., 23 de abr. de 2022 19:24:48: 
 tests:  1|8
total_score: 0/70
4eb158a
sá., 23 de abr. de 2022 19:55:17: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
8093b18
sá., 23 de abr. de 2022 21:33:32: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:85:14: error: comparison of distinct pointer types lacks a cast [-Werror]
        if(key> aux)
              ^
cc1.exe: all warnings being treated as errors
Compilation failed
307742d
sá., 23 de abr. de 2022 21:45:26: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0994719
sá., 23 de abr. de 2022 21:46:55: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
907c92e
sá., 23 de abr. de 2022 22:00:25: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
87cabff
sá., 23 de abr. de 2022 22:47:34: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:5: error: implicit declaration of function 'whille' [-Werror=implicit-function-declaration]
     whille(aux != NULL){
     ^~~~~~
treemap.c:52:24: error: expected ';' before '{' token
     whille(aux != NULL){
                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
9845303
sá., 23 de abr. de 2022 22:48:09: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
11dedee
sá., 23 de abr. de 2022 22:49:38: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
69bf9be
